Fixes visraam bug on mobile browsers

--- a/src/scss/_results.scss
+++ b/src/scss/_results.scss
@@ -58,7 +58,11 @@
     color: #f39c1d;
 
     .display-visraams & {
-      color: initial;
+      color: inherit;
+
+      &.search-highlight-word {
+        color: #01669b;
+      }
     }
   }
 }
